# test-mmds

./: docker-compose.yml  pyproject.toml  streamlit_app.py
config/: config.yml
docs/: plan.md
postgres-init/: 01_create_tables.sql  init.sql
scratch/: create_table.py
src/api/: db.py  main.py  session_manager.py
src/batch/: eda_advanced.py  funnel_analysis.py  seed_popular_items.py  spark_batch_analysis.py  user_segmentation.py
src/dashboard/pages/: 01_eda_overview.py  02_realtime_monitor.py  03_prediction_demo.py  04_model_evaluation.py  05_anomaly_alerts.py  06_user_segments.py  07_ab_comparison.py  08_system_health.py
src/simulator/: main.py
src/streaming/: anomaly_detector.py  processor.py  spark_streaming_job.py
