[project]
name = "mining-on-massive-datasets-ptit-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka==0.13.0",
    "altair>=6.0.0",
    "booktype>=1.5",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib==3.10.8",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pyspark==4.1.1",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "redis>=7.4.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]
